--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -2,178 +2,182 @@
 <html lang="en">
 
 <head>
-    <!--META TAGS  -->
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="Parastone">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--META TAGS  -->
+  <meta charset="UTF-8">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="Parastone">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CANONICAL -->
-    <link rel="canonical" href="https://yourdoaminname.com/" />
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://yourdoaminname.com/" />
 
-    <!-- TITLE -->
-    <title>Terms & Conditions | The Healthy Humans</title>
+  <!-- TITLE -->
+  <title>Terms & Conditions | The Healthy Humans</title>
 
-    <!-- BOOTSTRAP -->
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- BOOTSTRAP -->
+  <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
+  <!-- STYLESHEETS -->
+  <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="assets/css/fonts.css">
+  <link rel="stylesheet" href="assets/css/animate.css">
 
-    <!-- ICOFONTS -->
-    <link rel="stylesheet" href="assets/icofont/icofont.min.css">
+  <!-- ICOFONTS -->
+  <link rel="stylesheet" href="assets/icofont/icofont.min.css">
 
-    <!-- OWL CAROUSEL CSS -->
-    <link rel="stylesheet" href="assets/owl-carousel/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/owl-carousel/dist/assets/owl.theme.default.min.css">
+  <!-- OWL CAROUSEL CSS -->
+  <link rel="stylesheet" href="assets/owl-carousel/dist/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/owl-carousel/dist/assets/owl.theme.default.min.css">
 
-    <!-- SCRIPTS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/owl-carousel/dist/owl.carousel.min.js"></script>
+  <!-- SCRIPTS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/wow.min.js"></script>
+  <script src="assets/owl-carousel/dist/owl.carousel.min.js"></script>
 </head>
 
 <body>
-    <!-- HEADER STARTS -->
-    <header class="site-header navbar-dark">
-        <div id="header-wrap" class="position-absolute w-100 z-index-1">
-            <div class="container">
-                <div class="row">
-                    <!--MENU STARTS-->
-                    <div class="col">
-                        <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brandlogo text-white h2 mb-0" href="index.html">
-                                <img class="img-fluid" src="assets/images/logo/The Healthy Humans.png"
-                                    alt="The Healthy Humans" title="The Healthy Humans Logo">
-                            </a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNav">
-                                <ul class="navbar-nav ms-auto">
-                                    <li class="nav-item">
-                                        <a class="nav-link navbar-active" href="index.html">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">About Us</a>
-                                    </li>
+  <!-- HEADER STARTS -->
+  <header class="site-header navbar-dark">
+    <div id="header-wrap" class="position-absolute w-100 z-index-1">
+      <div class="container">
+        <div class="row">
+          <!--MENU STARTS-->
+          <div class="col">
+            <nav class="navbar navbar-expand-lg">
+              <a class="navbar-brandlogo text-white h2 mb-0" href="index.html">
+                <img class="img-fluid" src="assets/images/logo/The Healthy Humans.png" alt="The Healthy Humans"
+                  title="The Healthy Humans Logo">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link navbar-active" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#about-us">About Us</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Services</a>
-                                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Our Operations</a>
-                                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#our-operations">Our Operations</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Testimonials</a>
-                                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#testimonials">Testimonials</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Our Packages</a>
-                                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#offers">Latest Offers</a>
+                  </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Contact Us</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
-                    </div>
-                    <!--MENU ENDS-->
-                </div>
-            </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#our-packages">Our Packages</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contact-us">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+          <!--MENU ENDS-->
         </div>
-    </header>
-    <!-- HEADER ENDS -->
+      </div>
+    </div>
+  </header>
+  <!-- HEADER ENDS -->
 
-    <!-- PAGE TITLE STARTS -->
-    <section class="page-title">
-        <div class="container">
-            <h4>Terms & Conditions</h4>
-        </div>
-    </section>
-    <!-- PAGE TITLE ENDS -->
+  <!-- PAGE TITLE STARTS -->
+  <section class="page-title">
+    <div class="container">
+      <h4>Terms & Conditions</h4>
+    </div>
+  </section>
+  <!-- PAGE TITLE ENDS -->
 
-    <!-- PAGE CONTENT STARTS -->
-    <section class="page-content">
-        <div class="container">
-            <p class="para-one">Visitors to our website are required to accept the following terms and conditions in
-                return for the
-                information given about us, our business and the services we provide.</p>
+  <!-- PAGE CONTENT STARTS -->
+  <section class="page-content">
+    <div class="container">
+      <p class="para-one">Visitors to our website are required to accept the following terms and conditions in
+        return for the
+        information given about us, our business and the services we provide.</p>
 
-            <small>Condition to use</small>
+      <small>Condition to use</small>
 
-            <ul class="page-content-list">
-                <li>
-                    <i class="icofont-bubble-right"></i>
-                    We use our reasonable efforts to include accurate and up-to-date information on our web pages.
-                    Information is for guidance only and is not intended to form any part of a contract and can be
-                    subject to change without notice. We shall not be liable for any direct, indirect, incidental,
-                    consequential or cumulative losses or damages arising out of the use or inability to use these
-                    pages, any errors, misrepresentations or omissions on the material contained on them.
-                </li>
+      <ul class="page-content-list">
+        <li>
+          <i class="icofont-bubble-right"></i>
+          We use our reasonable efforts to include accurate and up-to-date information on our web pages.
+          Information is for guidance only and is not intended to form any part of a contract and can be
+          subject to change without notice. We shall not be liable for any direct, indirect, incidental,
+          consequential or cumulative losses or damages arising out of the use or inability to use these
+          pages, any errors, misrepresentations or omissions on the material contained on them.
+        </li>
 
-                <li>
-                    <i class="icofont-bubble-right"></i>
-                    The information on these web pages has been prepared with reasonable care and is believed by us to
-                    be legal, honest, decent and truthful as of the date of its preparation.
-                </li>
+        <li>
+          <i class="icofont-bubble-right"></i>
+          The information on these web pages has been prepared with reasonable care and is believed by us to
+          be legal, honest, decent and truthful as of the date of its preparation.
+        </li>
 
-                <li>
-                    <i class="icofont-bubble-right"></i>
-                    You agree that the material downloaded or otherwise accessed through the use of our web pages is
-                    obtained entirely at your own risk and that you will be entirely responsible for any resulting
-                    damage to software or computer systems and/or any resulting loss of data even if we have been
-                    advised of the possibility of any such damage.
-                </li>
+        <li>
+          <i class="icofont-bubble-right"></i>
+          You agree that the material downloaded or otherwise accessed through the use of our web pages is
+          obtained entirely at your own risk and that you will be entirely responsible for any resulting
+          damage to software or computer systems and/or any resulting loss of data even if we have been
+          advised of the possibility of any such damage.
+        </li>
 
-                <li>
-                    <i class="icofont-bubble-right"></i>
-                    We do not accept any liability in connection with any third party websites which may be linked or
-                    accessible through our own website and we do not endorse or approve the contents of any such site.
-                </li>
+        <li>
+          <i class="icofont-bubble-right"></i>
+          We do not accept any liability in connection with any third party websites which may be linked or
+          accessible through our own website and we do not endorse or approve the contents of any such site.
+        </li>
 
-                <li>
-                    <i class="icofont-bubble-right"></i>
-                    In relation to a dispute arising out of this website you the user and we, The Healthy Humans, agree
-                    to submit exclusively to the jurisdiction of the courts of.
-                </li>
+        <li>
+          <i class="icofont-bubble-right"></i>
+          In relation to a dispute arising out of this website you the user and we, The Healthy Humans, agree
+          to submit exclusively to the jurisdiction of the courts of.
+        </li>
 
-                <li>
-                    <i class="icofont-bubble-right"></i>
-                    Except where expressly stated to the contrary the text and graphics in the information contained in
-                    this website is the copyright of Healthyhumans. You may download or print out individual selections
-                    of these web pages only if explicitly used for your own personal information and not to be publicly
-                    reproduced. Permanent copying or storage of whole or part of this website or the information
-                    contained in it or reproduction or incorporation of any part of it in any other work or publication
-                    whether on paper or electronic media or any other form is expressly prohibited.
-                </li>
+        <li>
+          <i class="icofont-bubble-right"></i>
+          Except where expressly stated to the contrary the text and graphics in the information contained in
+          this website is the copyright of Healthyhumans. You may download or print out individual selections
+          of these web pages only if explicitly used for your own personal information and not to be publicly
+          reproduced. Permanent copying or storage of whole or part of this website or the information
+          contained in it or reproduction or incorporation of any part of it in any other work or publication
+          whether on paper or electronic media or any other form is expressly prohibited.
+        </li>
 
-                <li>
-                    <i class="icofont-bubble-right"></i>
-                    The entire contents of these web pages remain our property and copyright with all rights reserved.
-                </li>
-            </ul>
+        <li>
+          <i class="icofont-bubble-right"></i>
+          The entire contents of these web pages remain our property and copyright with all rights reserved.
+        </li>
+      </ul>
 
-            <small>Data Protection Act 1998 </small>
-            <p>Your personal information is personal property and as such we have published a separate Privacy Policy on
-                these web pages. Our omission to exercise any rights under these conditions of use does not constitute a
-                waiver or such right unless expressly accepted by us in writing.</p>
-        </div>
-    </section>
+      <small>Data Protection Act 1998 </small>
+      <p>Your personal information is personal property and as such we have published a separate Privacy Policy on
+        these web pages. Our omission to exercise any rights under these conditions of use does not constitute a
+        waiver or such right unless expressly accepted by us in writing.</p>
+    </div>
+  </section>
 
-    <!-- FOOTER STARTS -->
+  <!-- FOOTER STARTS -->
   <footer>
     <div class="container">
       <div class="row">
@@ -203,11 +207,13 @@
           <div class="footer-col-two">
             <h4>Useful Links</h4>
             <ul class="footer-list">
-              <li><a href="index.html">About Us</a></li>
-              <li><a href="index.html">Services</a></li>
-              <li><a href="index.html">Our Team</a></li>
-              <li><a href="index.html">Testimonials</a></li>
-              <li><a href="index.html">Contact Us</a></li>
+              <li><a href="#about-us">About Us</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#our-team">Our Team</a></li>
+              <li><a href="#testimonials">Testimonials</a></li>
+              <li><a href="#offers">Offers</a></li>
+              <li><a href="#our-packages">Our Package</a></li>
+              <li><a href="#contact-us">Contact Us</a></li>
             </ul>
           </div>
         </div>
@@ -227,7 +233,7 @@
           <div class="footer-col-three">
             <h4>Connect with Us</h4>
             <div class="wrapper">
-              <a href="https://facebook.com" target="blank">
+              <a href="https://www.facebook.com/thehealthyhumans0913" target="blank">
                 <div class="icon facebook wow fadeIn" data-wow-delay="500ms">
                   <div class="tooltip">Facebook</div>
                   <span><i class="icofont-facebook"></i></span>
@@ -239,7 +245,7 @@
                   <span><i class="icofont-twitter"></i></span>
                 </div>
               </a>
-              <a href="https://instagram.com" target="blank">
+              <a href="https://www.instagram.com/the_healthyhumans/" target="blank">
                 <div class="icon instagram wow fadeIn" data-wow-delay="1100ms">
                   <div class="tooltip">Instagram</div>
                   <span><i class="icofont-instagram"></i></span>
@@ -262,6 +268,6 @@
 </html>
 
 <script>
-    // WOW JS INTITATED
-    new WOW().init();
+  // WOW JS INTITATED
+  new WOW().init();
 </script>
